src/templates/docTemplate.less
@import (reference) "../css/responsive.less";
html {
  // header height = 80px
  scroll-padding-top: 102px;
}

.doc-temp-container {
  position: relative;

  .left-nav {
    width: 282px;
    bottom: 0;
    height: 100%;
  }

  .left-nav,
  .right-nav {
    padding: 0 16px;
  }

  .doc-content-container {
    display: flex;

    h1 {
      margin-top: 8px;
    }

    .doc-post-wrapper {
      max-width: 950px;
      padding: 0 32px;
      width: calc(100vw - 514px);
      box-sizing: border-box;
      will-change: max-width, width;

      @media @tablet {
        transition: none;
        will-change: none;
        width: calc(100vw - 232px);
      }
      @media @phone {
        width: 100%;
      }
    }
  }

  .right-nav {
    width: 232px;

    position: sticky;
    top: 120px;
    max-height: calc(100vh - 120px);
    overflow: auto;
  }
}

.doc-right-container {
  will-change: margin-left;
  display: flex;
  flex-direction: column;
  gap: 100px;

  margin-left: 282px;
  width: calc(100vw - 514px);

  &.is-collapse {
    margin-left: 20px;
    width: calc(100vw - 255px);
    max-width: calc(950px + 282px - 20px);
  }

  @media @tablet {
    transition: none;
    will-change: none;
    margin-left: 0;
    border-left: none;
  }

  @media @tablet, @phone {
    margin-left: 0;
    max-width: 100%;
    width: auto;
  }
}

.doc-right-footer {
  padding-left: 48px;
  padding-right: 48px;
}

.doc-post-content {
  // padding: 0 4rem;
  background: #fff;
  // min-height: 80vh;
  // max-width: calc(100% - 280px);
  overflow: hidden;
  position: relative;
  padding-top: 16px;

  @media @tablet {
    padding: 16px 16px;
    padding-top: 26px;
    font-size: 16px;
    width: 100%;
  }

  div[class*="filter-"] {
    display: none;

    &.active {
      display: block;
    }
  }
}

/* hide toc on mobile */
.doc-toc-container {
  @media @phone, @tablet {
    display: none;
  }
}

// ---commit-info-wrapper----
.commit-info-wrapper {
  border-left: 4px solid var(--color-grey-04);
  padding-left: 16px;
  margin-top: 40px;
  margin-bottom: 40px;

  a,
  span {
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;

    color: var(--color-grey-02);
  }
}

.docHeader {
  .headerContainer {
    padding: 0 40px;
    width: 100%;
    @media @phone, @tablet {
      padding: 0 20px;
    }
  }
}

.api-reference-wrapper {
  padding-top: 16px;
}

// home
.doc-home.doc-content-container {
  display: block;
  margin-right: 0;
  max-width: 950px;
  padding: 0;

  .doc-h1-wrapper {
    background-image: url(../images/docs/home_banner.svg);
    background-position: 500px center;
    background-color: var(--color-grey-05);
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #f5f8fb;
    min-height: 235px;
    width: calc(100vw - 282px);
    padding: 49px 47px;
    will-change: width;

    @media @tablet, @phone {
      width: 100vw;
    }

    .title {
      /* H2/Regular */

      font-style: normal;
      font-weight: bold;
      font-size: 40px;
      line-height: 50px;
      /* identical to box height, or 125% */

      padding-bottom: 9px;
      max-width: 650px;
    }

    .sub-title {
      /* H6/Regular */

      font-style: normal;
      font-weight: normal;
      font-size: 16px;
      line-height: 24px;
      max-width: 650px;
      /* identical to box height, or 150% */
    }
  }

  h2 {
    /* H2/Regular */

    font-style: normal;
    font-weight: bold;
    font-size: 40px;
    line-height: 50px;
    margin-bottom: 34px;
  }

  .card-wrapper {
    display: grid;
    grid-auto-rows: minmax(230px, auto);
    grid-template-columns: repeat(auto-fit, 268px);
    justify-content: space-between;
    grid-gap: 20px;

    @media @phone {
      justify-content: center;
    }

    .start_card_container {
      background: var(--color-white);
      border: 1px solid #dee8f1;
      box-sizing: border-box;
      border-radius: 4px;
      padding: 25px;
      min-width: 185px;
      gap: 5px;

      min-height: 230px;
      display: flex;
      flex-direction: column;
      align-items: center;

      &:hover {
        border: 1px solid #b8ccde;
      }

      p {
        text-align: center;
        margin: 0;
        /* H7/Regular */

        font-style: normal;
        font-weight: normal;
        font-size: 14px;
        line-height: 20px;
      }

      a {
        text-decoration: none;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;

        p {
          font-size: 24px;
          line-height: 34px;
        }
      }

      .link-btn {
        font-style: normal;
        font-weight: normal;
        font-size: 24px;
        line-height: 34px;

        text-align: center;

        color: var(--color-black);
      }

      img {
        margin: 0;
        width: 60px;
        height: 60px;
      }
    }
  }

  .milmi-tip {
    background-color: var(--color-grey-05);
    padding: 24px 100px 24px 30px;
    position: relative;
    margin-top: 54px;

    p {
      margin: 0;
      /* H6/Regular */

      font-style: normal;
      font-weight: normal;
      font-size: 16px;
      line-height: 24px;
    }

    img {
      position: absolute;
      margin: 0;
      right: 20px;
      top: -20px;
    }
  }

  .doc-home-recommend-section {
    display: grid;
    grid-auto-rows: minmax(220px, auto);
    grid-template-columns: repeat(auto-fit, 200px);
    justify-content: space-between;

    .recomment-item {
      > p {
        font-style: normal;
        font-weight: normal;
        font-size: 24px;
        line-height: 34px;

        color: var(--color-black);
      }

      li {
        color: var(--color-text-primary);

        a {
          text-decoration: none;
          color: var(--color-text-primary);
          font-style: normal;
          font-weight: normal;
          font-size: 16px;
          line-height: 24px;
        }

        &:hover,
        &:hover a {
          color: #0279ae;
        }
      }
    }
  }

  .doc-home-what-is-new {
    background: var(--color-bg-blue);
    border-left: 4px solid var(--color-highlight);
    padding: 26px 30px;
    margin-top: 60px;

    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 20px;

    color: var(--color-black);

    h2 {
      font-style: normal;
      font-weight: normal;
      font-size: 24px;
      line-height: 34px;
      margin: 0;

      color: var(--color-black);
    }
    p > em {
      display: block;
      margin-top: 20px;
    }
  }

  .doc-home-html-Wrapper {
    > * {
      margin-left: 48px;
      margin-right: 48px;

      @media @phone {
        margin-left: 32px;
        margin-right: 32px;
      }
    }

    .doc-h1-wrapper {
      margin: 0;
    }
  }

  .doc-home-blog {
    margin-left: 48px;
    margin-right: 48px;
    box-shadow: none;

    h2 {
      margin-bottom: 20px;
      margin-top: 60px;
    }

    img {
      margin: 0;
    }
  }
}

